--- a/sass/bootstrap-select.scss
+++ b/sass/bootstrap-select.scss
@@ -38,7 +38,6 @@ select.selectpicker {
   > .dropdown-toggle {
     position: relative;
     width: 100%;
-    z-index: 1;
     // necessary for proper positioning of caret in Bootstrap 4 (pushes caret to the right)
     text-align: right;
     white-space: nowrap;
@@ -125,14 +124,9 @@ select.selectpicker {
     width: 100%;
   }
 
+  .input-group &,
   &.input-group-btn {
     z-index: auto;
-
-    &:not(:first-child):not(:last-child) {
-      > .btn {
-        border-radius: 0;
-      }
-    }
   }
 }
 
